syntax = "proto3";

package raptor.core.v1alpha1;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "raptor/core/v1alpha1/types.proto";
import "validate/validate.proto";

option go_package = "github.com/raptor-ml/raptor/core/v1alpha1;coreV1alpha1";

// +++ Read methods +++

// GetRequest
message GetRequest {
    string uuid = 1 [(validate.rules).string.uuid = true];
    string fqn = 2 [(validate.rules).string.pattern = "(i?)^([a0-z9\\-\\.]*)(\\[([a0-z9])*\\])?$"];
    string entity_id = 3;
}
message GetResponse {
    string uuid = 1 [(validate.rules).string.uuid = true];
    FeatureValue value = 2;
    Metadata metadata = 3;
}

// +++ Write methods +++

message SetRequest {
    string uuid = 1 [(validate.rules).string.uuid = true];
    string fqn = 2 [(validate.rules).string.pattern = "(i?)^([a0-z9\\-\\.]*)(\\[([a0-z9])*\\])?$"];
    string entity_id = 3;
    Value value = 4;
    google.protobuf.Timestamp timestamp = 5;
}
message SetResponse {
    string uuid = 1 [(validate.rules).string.uuid = true];
    google.protobuf.Timestamp timestamp = 2;
}

message AppendRequest {
    string uuid = 1 [(validate.rules).string.uuid = true];
    string fqn = 2 [(validate.rules).string.pattern = "(i?)^([a0-z9\\-\\.]*)(\\[([a0-z9])*\\])?$"];
    string entity_id = 3;
    Scalar value = 4;
    google.protobuf.Timestamp timestamp = 5;
}
message AppendResponse {
    string uuid = 1 [(validate.rules).string.uuid = true];
    google.protobuf.Timestamp timestamp = 2;
}

message IncrRequest {
    string uuid = 1 [(validate.rules).string.uuid = true];
    string fqn = 2 [(validate.rules).string.pattern = "(i?)^([a0-z9\\-\\.]*)(\\[([a0-z9])*\\])?$"];
    string entity_id = 3;
    Scalar value = 4;
    google.protobuf.Timestamp timestamp = 5;
}
message IncrResponse {
    string uuid = 1 [(validate.rules).string.uuid = true];
    google.protobuf.Timestamp timestamp = 2;
}

message UpdateRequest {
    string uuid = 1 [(validate.rules).string.uuid = true];
    string fqn = 2 [(validate.rules).string.pattern = "(i?)^([a0-z9\\-\\.]*)(\\[([a0-z9])*\\])?$"];
    string entity_id = 3;
    Value value = 4;
    google.protobuf.Timestamp timestamp = 5;
}
message UpdateResponse {
    string uuid = 1 [(validate.rules).string.uuid = true];
    google.protobuf.Timestamp timestamp = 2;
}
message MetadataRequest {
    string uuid = 1 [(validate.rules).string.uuid = true];
    string fqn = 2 [(validate.rules).string.pattern = "(i?)^([a0-z9\\-\\.]*)(\\[([a0-z9])*\\])?$"];
}
message MetadataResponse {
    string uuid = 1 [(validate.rules).string.uuid = true];
    Metadata metadata = 2;
}


// +++ Service +++
service EngineService {
    rpc Metadata (MetadataRequest) returns (MetadataResponse) {
        option (google.api.http) = {
            get: "/{fqn}"
        };
    }
    rpc Get (GetRequest) returns (GetResponse) {
        option (google.api.http) = {
            get: "/{fqn}/{entity_id}"
        };
    }
    rpc Set (SetRequest) returns (SetResponse) {
        option (google.api.http) = {
            put: "/{fqn}/{entity_id}"
        };
    }
    rpc Append (AppendRequest) returns (AppendResponse) {
        option (google.api.http) = {
            post: "/{fqn}/{entity_id}/append"
        };
    }
    rpc Incr (IncrRequest) returns (IncrResponse) {
        option (google.api.http) = {
            post: "/{fqn}/{entity_id}/incr"
        };
    }
    rpc Update (UpdateRequest) returns (UpdateResponse) {
        option (google.api.http) = {
            post: "/{fqn}/{entity_id}"
        };
    }
}
